--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ input {
 
 .entrust .mainBox{top: 0;}
 .list-type{font-size:0.75rem; margin:10px 0;text-align:center;color: #f63;}
-.list-type span{width:32%;padding: 10px 0;text-align:center;background-color:#f1f1f1; display:inline-block; border:1px solid #f63; border-left:0;}
+.list-type span{width:32%;padding: 8px 0;text-align:center;background-color:#f1f1f1; display:inline-block; border:1px solid #f63; border-left:0;}
 .list-type span:first-child{border-top-left-radius:5px;border-bottom-left-radius:5px;}
 .list-type span:last-child{border-top-right-radius:5px;border-bottom-right-radius:5px;}
 .list-type span.active{color:#fff; background-color:#f63;}
@@ -506,9 +506,9 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 #artistList ul{overflow:hidden;}
 #artistList a.telescopic{position:absolute; display:block; width:50%; border:1px solid #ccc; background-color:#fcfcfc; font-size:0.85rem; padding:5px 0; left:50%; bottom:-1.7rem; margin-left:-25%; line-height:1rem; text-align:center;}
 .art-tab-img{display:block; width:100%; background-position:center center; background-size:100% auto; background-color:#efefef; background-repeat:no-repeat;}
-.video_list a{display:flex; width:100%; height:2.5rem; padding:5px; position:relative; margin-top:15px;}
+.video_list a{display:flex; width:100%; height:2.5rem; padding:5px; position:relative; margin-top:10px;}
 .video_list a div{width:100%; height:100%; position:absolute; left:0; top:0; background-color:#000; opacity:0.7; z-index:0;}
-.video_list a em{width:2rem; height:2rem; background:url(../images/play.png) no-repeat; background-size:100% 100%; display:box; z-index:1; position:relative; margin-right:10px;}
+.video_list a em{width:1.5rem; height:1.5rem;margin-top: 4px; background:url(../images/play.png) no-repeat; background-size:100% 100%; display:box; z-index:1; position:relative; margin-right:8px;}
 .video_list a span{width:80%; display:box; color:#fff; height:2rem; line-height:2rem; z-index:2; position:relative; font-size:0.85rem; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
 .videoList input{border-top:none;}
 .videoList section{margin-bottom:10px; border-top:1px solid #ccc;}
