--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
 	min-height: 100%;
 	 color:#333;
 	 font-family:'microsoft yahei',Arial,Helvetica,sans-serif;
-	 font-size: 16px;
+	 font-size: 14px;
 	 background-color:#efefef;
 	 background-position:left bottom;
 	 background-repeat:no-repeat;
@@ -162,9 +162,9 @@ input {
 .role-a span{width:30%; height:2rem; line-height:2rem; text-align:center; color:#333; display:inline-block; background-color:#fcfcfc; margin:5px 1.5% 5px 1.5%;}
 .role-a span.active{ background-color:#2f8bcd; color:#fff;}
 .bt{border-top:1px solid #ccc; padding-top:10px;}
-.save-btn,.create-com,.create-btn{ width: 50%;margin:0 auto;height: 35px;color: #fff;font-size: 14px;background: #ff8604;border: 0;text-align: center;line-height: 35px;cursor: pointer;}
+.save-btn,.create-com,.create-btn{width:50%; margin:0 auto; border-radius:5px; height: 35px;color: #fff;font-size: 14px;background: #ff8604;border: 0;text-align: center;line-height: 35px;cursor: pointer;}
 .t-center{text-align:center;}
-.inp1 label{width:80px; display:inline-block; text-align:right; vertical-align:middle;}
+.inp1 label{width:80px; display:inline-block; text-align:right; vertical-align:middle;line-height: 22px;}
 .tea1{width:65%; height:4rem; vertical-align:top; border:1px solid #eee; font-size:14px; line-height:22px; color:#999; padding:5px; font-family:"microsoft yahei";}
 .dk_container{margin-bottom:0; border-radius:0;}
 .dk_toggle{padding-top:4px; padding-bottom:4px;}
@@ -206,13 +206,13 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .det .inp1 label{vertical-align:top}
 .role-list{padding:10px; background-color:#fff;}
 .role-list li{color:#999; font-size:0.9rem; border-bottom:1px dashed #ccc; padding:5px 0 10px 0; margin-bottom:10px;}
-.role-list li div{position:relative;}
+.role-list li div{position:relative;font-size: 0.8rem}
 .role-list li:last-child{border-bottom:0px;}
-.role-list li .refuse{padding:2px 8px; position:absolute; right:10px; top:14px; height:1.2rem;line-height:1.2rem;font-size:0.6rem;text-align:center; display:inline-block;background-color:#fc9e2f; color:#fff; vertical-align: middle;}
+.role-list li .refuse{padding:2px 8px; position:absolute; right:10px; top:14px; height:1.2rem;line-height:1.1rem;font-size:0.6rem;text-align:center; display:inline-block;background-color:#fc9e2f; color:#fff; border-radius:5px; vertical-align: middle;}
 .role-list li .role-title{width:100%; font-size:1rem;line-height: 2rem;}
-.role-title span{width:65px;font-size: 0.5rem; color:#333;display:inline-block; vertical-align:top;text-align: center;}
-.role-title span:first-child{font-size: 1rem; color:#fc9e2f;text-align: left;}
-.role-title .yz{padding:2px 8px; height:1.2rem;line-height:1.2rem;font-size:0.6rem;text-align:center; display:inline-block;background-color:#fc9e2f; color:#fff; vertical-align: middle;}
+.role-title span{width:28%;font-size: 0.8rem; color:#333;display:inline-block; vertical-align:top;text-align: left;}
+.role-title span:first-child{width:35%;font-size: 0.8rem; color:#fc9e2f;text-align: left;}
+.role-title .yz{position:absolute;right:0;top:5px;padding:2px 8px; height:1.2rem; border-radius:5px; line-height:1.2rem;font-size:0.8rem;text-align:center; display:inline-block;background-color:#fc9e2f; color:#fff; vertical-align: middle;}
 .role-title .yz.disable{background-color:#ddd;}
 .swiper-slide .head-img{width:3rem;margin-right: 10px;}
 .head-img{width:3rem; height:3rem; border-radius:50%; display:inline-block;}
@@ -239,7 +239,7 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .artistprice ul li{height:36px; line-height:36px; font-size:0.9rem; color:#999; border-bottom:1px dashed #ccc; padding:0 30px; position:relative;}
 .artistprice ul li span{width:45%; display:inline-block;}
 .artistprice ul li em{width:45%; display:inline-block;}
-.artistprice ul li a{height:25px; width:3rem; color:#fff; display:inline-block; background-color:#f63; line-height:25px; text-align:center; position:absolute; right:20px; top:5px;}
+.artistprice ul li a{height:25px; width:3rem; border-radius:5px; color:#fff; display:inline-block; background-color:#f63; line-height:25px; text-align:center; position:absolute; right:20px; top:5px;}
 .artistprice ul li.bbn{border-bottom:none;}
 .nextBtn{width:20px; height:20px; background:url(../images/iconfont-icon02.png) no-repeat center center; background-size:100% 100%; position:absolute; right:10px; top:10px;}
 .art-head{margin-bottom:10px;}
@@ -250,7 +250,7 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .art-img-txt span.no{background-color:#aaa;}
 .art-name{font-size:0.9rem; text-align:center; line-height:1.5rem; padding:5px 0;}
 .art-fans{text-align:center; font-size:0.9rem; padding:5px 0;}
-.art-fans a{padding:3px 8px; color:#fff; background-color:#f63; display:inline-block; margin-left:10px;}
+.art-fans a{padding:3px 8px; color:#fff; background-color:#f63; display:inline-block; margin-left:10px; border-radius:5px;}
 .art-detail{background-color:#fff;}
 .transaction{padding:10px;}
 .trans-h3{font-size:1rem; border-bottom:1px solid #ccc; padding-bottom:10px; font-weight:bold;}
@@ -481,7 +481,7 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .agree{padding:10px 0; text-align:center;}
 .agree a{text-decoration:underline; color:#2f8bcd;}
 .xieyi{font-size:0.8rem;}
-.agree a.reg-btn{padding:5px 15px; background-color:#318bcb; color:#fff; text-decoration:none; margin-top:10px;}
+.agree a.reg-btn{padding:5px 15px; background-color:#318bcb; color:#fff; border-radius:5px; text-decoration:none; margin-top:10px;}
 .mui-input-group .h-portrait{height:auto;}
 .mui-input-row label{font-size:0.85rem; font-family:"microsoft yahei"; line-height:1.3rem;}
 .txt_area{width:70% !important; border:1px solid #ccc !important;}
@@ -508,13 +508,13 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .art-tab-img{display:block; width:100%; background-position:center center; background-size:100% auto; background-color:#efefef; background-repeat:no-repeat;}
 .video_list a{display:flex; width:100%; height:2.5rem; padding:5px; position:relative; margin-top:10px;}
 .video_list a div{width:100%; height:100%; position:absolute; left:0; top:0; background-color:#000; opacity:0.7; z-index:0;}
-.video_list a em{width:1.5rem; height:1.5rem;margin-top: 4px; background:url(../images/play.png) no-repeat; background-size:100% 100%; display:box; z-index:1; position:relative; margin-right:8px;}
+.video_list a em{width:1.5rem; height:1.5rem;margin-top: 4px; background:url(../images/play1.png) no-repeat; background-size:100% 100%; display:box; z-index:1; position:relative; margin-right:8px;}
 .video_list a span{width:80%; display:box; color:#fff; height:2rem; line-height:2rem; z-index:2; position:relative; font-size:0.85rem; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
 .videoList input{border-top:none;}
 .videoList section{margin-bottom:10px; border-top:1px solid #ccc;}
 .videoList{background-color:transparent !important; padding-top:0;}
 .videoList h3{background-color:#fff; padding-top:10px; margin-bottom:10px;}
-.videoList h3 span{float:right; font-size:0.85rem; padding:3px 10px; background-color:#308ACA; color:#fff; cursor:pointer;}
+.videoList h3 span{float:right; font-size:0.85rem; padding:3px 10px; border-radius:5px; background-color:#308ACA; color:#fff; cursor:pointer;}
 .videoListAdd a span{height:3rem; line-height:1rem;}
 .videoListAdd a span i{display:block;}
 .jwarning{font-size:0.7rem; color:#f63; text-align:left; padding-left:10px;}
