--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ input {
 .title img,.bg img{width:100%;}
 
 
-.main{position:relative;overflow:hidden;}
+.main{position:relative;overflow:hidden;padding-bottom: 50px;}
 .warp{ height:100%;overflow:hidden; position:relative;}
 
 
@@ -147,7 +147,7 @@ input {
 .h-price input{width:50%;}
 .inp1 div.in input{width:100%;}
 .tb-1{width:25px; height:25px; vertical-align: middle; margin-top:-7px; margin-right:10px; display:inline-block; background:url(../images/iconfont-personalcenter.png) no-repeat; background-size:100% 100%;}
-.add{ font-size:18px; width:100%; background-color:#fff; height:6.5rem; margin-bottom:10px; z-index:15; border-bottom: 1px solid #ccc; box-shadow:2px 2px 7px #ccc; line-height:6.5rem; text-align:center; position:fixed; top:0; left:0;}
+.add{ font-size:18px; width:100%; background-color:#fff; height:5.5rem; margin-bottom:10px; z-index:15; border-bottom: 1px solid #ccc; box-shadow:2px 2px 7px #ccc; line-height:5.5rem; text-align:center; position:fixed; top:0; left:0;}
 .role table{ background-color:#fff; padding:10px; margin-bottom:10px; color:#333；}
 .role table td{padding:5px; line-height:22px; vertical-align:top;}
 .swiper-container{color:#333;}
@@ -164,8 +164,9 @@ input {
 .bt{border-top:1px solid #ccc; padding-top:10px;}
 .save-btn,.create-com,.create-btn{width:50%; margin:0 auto; border-radius:5px; height: 35px;color: #fff;font-size: 14px;background: #ff8604;border: 0;text-align: center;line-height: 35px;cursor: pointer;}
 .t-center{text-align:center;}
+.special{margin: 30px;}
 .inp1 label{width:80px; display:inline-block; text-align:right; vertical-align:middle;line-height: 22px;}
-.tea1{width:65%; height:4rem; vertical-align:top; border:1px solid #eee; font-size:14px; line-height:22px; color:#999; padding:5px; font-family:"microsoft yahei";}
+.tea1{width:70%; height:4rem; vertical-align:top; border:1px solid #eee; font-size:14px; line-height:22px; color:#999; padding:5px; font-family:"microsoft yahei";}
 .dk_container{margin-bottom:0; border-radius:0;}
 .dk_toggle{padding-top:4px; padding-bottom:4px;}
 .issue .infolist li{margin-left:0; border-radius:0; font-size: 14px; padding-left:5px;}
@@ -258,6 +259,7 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .trans-nav span{width:45%; height:30px; font-weight:bold; line-height:35px; font-size:0.85rem; display:inline-block;}
 .trans-txt{font-size:0.85rem; line-height:26px;}
 .transaction li{border-bottom:1px dashed #ccc; padding:10px 0; margin-bottom:10px;}
+.transaction li:last-child{border-bottom: 0}
 
 .mui-preview-image.mui-fullscreen {
 	position: fixed;
@@ -431,7 +433,7 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .imgload .sel-btn{display: none;}
 .imgload .imgview{margin-bottom:10px;}
 .imgview span{width:100px; height:100px; display:inline-block; line-height:100px; background-color:#f1f1f1;}
-.imgload .imgview img{max-width:100px !important; height:auto; max-height:100px;}
+.imgload .imgview img{max-width:70px !important; height:auto; max-height:70px;}
 .sel-btn{width:100px; height:30px; background-color:#308ACA !important; color:#fff !important; border:0 !important;}
 #testmm,#testme{position:absolute; width:108px; height:142px; opacity:0; left:45px; top:0;}
 #error{position:absolute; left:20px; bottom:65px;}
@@ -473,6 +475,7 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .qq-weixin a{display:inline-block; width:3.5rem; height:0; padding-top:3.5rem; margin:0 2%; font-size:0.85rem; color:#666;}
 .qq-weixin a:nth-of-type(1){background:url(../images/qq.png) no-repeat; background-size:100% 100%;}
 .qq-weixin a:nth-of-type(2){background:url(../images/weixin.png) no-repeat; background-size:100% 100%;}
+.reg_gz{padding-bottom: 60px}
 .reg_gz .mui-input-row:after{left:0;}
 .reg_gz .mui-input-row em{width:25px; height:25px; display:block; position:absolute; left:8px; top:8px; background-size:100% 100%; background-repeat:no-repeat;}
 .reg_gz .mui-input-row em.tel{background-image:url(../images/tel.png);}
@@ -520,4 +523,15 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
 .videoListAdd a span i{display:block;}
 .jwarning{font-size:0.7rem; color:#f63; text-align:left; padding-left:10px;}
 .mui-table-view {margin-top: 20px;}
-.circle_btn{width:45px; height:45px; padding:8px; line-height:14px; display:block; background-color:#308ACA; border-radius:50%; position:absolute; color:#fff; text-align:center; z-index:100; font-size:12px; bottom:30px; right:20px;}
+
+/*pcenter*/
+.center_list{text-align: center;padding: 11px 15px !important;font-size: 12px;}
+.center_item{float:left;width:33%;color:#333;margin: 0 !important;padding: 0 !important;}
+.item_2{border-left: 1px solid #eee;border-right: 1px solid #eee;}
+.center_item img{width: 24px;height: 24px;margin: 0 auto 3px auto;}
+
+/*menu*/
+.menu .mui-tab-item{width:25%}
+.no-ab{position: static;padding-bottom: 50px}
+
+.ptype{display:inline-block;width:80px;}
